# dwld_staticmap

./: .gitignore  __main__.py  add_gps.py  downloads_corridor_google_image.py  downloads_staticmap_google.py  get_sparse_point.py  pyproject.toml
config/: add_gps_config.yaml  corridors_config.yaml  download_config.yaml  sparse_points_config.yaml
